Add Supabase + Render config

--- a/.env.production.template
+++ b/.env.production.template
@@ -1,18 +1,24 @@
-# LCopilot API Production Environment Configuration
-# Copy to apps/api/.env.production and provide real secrets.
+# ================================================================
+# TRDR Hub Production Environment Template (.env.production)
+# ================================================================
+# Populate with deployment secrets and copy to the platform that runs
+# FastAPI (Render, Docker, Kubernetes, etc.).
 
 ENVIRONMENT=production
+APP_VERSION=1.0.0
 DEBUG=false
+
+# Fully-qualified URLs
 API_BASE_URL=https://api.trdrhub.com
 FRONTEND_URL=https://app.trdrhub.com
 
-# Database
-DATABASE_URL=postgresql://username:password@db-host:5432/lcopilot_prod
+# Database (Render Postgres, Supabase, RDS, etc.)
+DATABASE_URL=postgresql://username:password@db-hostname:5432/lcopilot_prod
 
-# Authentication (change immediately in production)
+# Security
 SECRET_KEY=replace-with-production-secret
-ACCESS_TOKEN_EXPIRE_MINUTES=60
 JWT_SECRET_KEY=replace-with-production-jwt-secret
+ACCESS_TOKEN_EXPIRE_MINUTES=60
 JWT_EXPIRATION_HOURS=24
 
 # AWS (required when USE_STUBS=false)
@@ -42,6 +48,15 @@ SSLCOMMERZ_STORE_ID=
 SSLCOMMERZ_STORE_PASSWORD=
 SSLCOMMERZ_SANDBOX=false
 
-# Observability
+# Observability / Monitoring
 LOG_LEVEL=INFO
+APP_LOG_FORMAT=json
 CLOUDWATCH_NAMESPACE=lcopilot-prod
+SENTRY_DSN=
+
+# Optional Integrations
+REDIS_URL=redis://redis-host:6379
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
