--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,23 +1,22 @@
 # LCopilot API Environment Configuration
+# Copy to apps/api/.env for local development.
 
-# Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/lcopilot
+# Core
+ENVIRONMENT=development
+DEBUG=true
+API_BASE_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:5173
 
-# AWS Configuration (only needed when USE_STUBS=false)
-AWS_REGION=us-east-1
-S3_BUCKET_NAME=lcopilot-documents
-
-# Google Cloud Configuration (only needed when USE_STUBS=false)
-GOOGLE_CLOUD_PROJECT=your-gcp-project
-GOOGLE_DOCUMENTAI_LOCATION=us
-GOOGLE_DOCUMENTAI_PROCESSOR_ID=your-processor-id
+# Database
+DATABASE_URL=postgresql://postgres:password@localhost:5432/lcopilot_dev
 
 # Authentication
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=local-secret-key
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_SECRET_KEY=local-jwt-secret
+JWT_EXPIRATION_HOURS=24
 
 # Stub Mode Configuration
-# Set to true for local development without real AWS/GCP credentials
 USE_STUBS=true
 STUB_SCENARIO=lc_happy.json
 STUB_FAIL_OCR=false
@@ -25,14 +24,32 @@ STUB_FAIL_STORAGE=false
 STUB_DATA_DIR=./stubs
 STUB_UPLOAD_DIR=/tmp/lcopilot_uploads
 
-# Application Settings
-DEBUG=false
+# AWS (required when USE_STUBS=false)
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=lcopilot-documents-dev
+DR_OBJECT_BACKUP_BUCKET=trdrhub-dev-backups
 
-# Available Stub Scenarios:
-# - lc_happy.json: Perfect validation with no discrepancies
-# - lc_mismatch.json: Multiple Fatal Four violations (dates, amounts, parties, ports)
-# - lc_expired.json: Expired LC scenario (critical validation failure)
-#
-# Error Simulation:
-# - STUB_FAIL_OCR=true: Simulates OCR processing failures
-# - STUB_FAIL_STORAGE=true: Simulates S3 storage failures
+# Google Cloud Document AI (required when USE_STUBS=false)
+GOOGLE_CLOUD_PROJECT=
+GOOGLE_DOCUMENTAI_LOCATION=us
+GOOGLE_DOCUMENTAI_PROCESSOR_ID=
+GOOGLE_APPLICATION_CREDENTIALS=/absolute/path/to/google-service-account.json
+
+# AI Providers (Phase 6)
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+LLM_MODEL_VERSION=gpt-4o-mini
+
+# Billing Providers
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+SSLCOMMERZ_STORE_ID=
+SSLCOMMERZ_STORE_PASSWORD=
+SSLCOMMERZ_SANDBOX=true
+
+# Observability
+LOG_LEVEL=INFO
+CLOUDWATCH_NAMESPACE=lcopilot-dev
