--- a/apps/web/.env.production.template
+++ b/apps/web/.env.production.template
@@ -1,9 +1,11 @@
 # LCopilot Frontend Production Environment Configuration
-# Copy this to .env.production and fill in your actual values
+# Copy this to .env.production and update the values before deploying.
 
-# API URL for production backend
-VITE_API_URL=https://your-api-domain.com
+VITE_API_URL=https://api.trdrhub.com
+VITE_APP_NAME=LCopilot
+VITE_TOKEN_STORAGE_KEY=lcopilot_token
+VITE_APP_ENV=production
 
-# Optional: Additional production settings
-# VITE_ANALYTICS_ID=your-analytics-id
-# VITE_SENTRY_DSN=your-sentry-dsn
+# Optional monitoring / analytics
+VITE_ANALYTICS_ID=
+VITE_SENTRY_DSN=
