--- a/.env.example
+++ b/.env.example
@@ -1,125 +1,76 @@
-# =============================================================================
-# LCopilot Environment Variables Template
-# =============================================================================
-# Copy this file to .env for development or .env.production for production
-# Replace all placeholder values with your actual configuration
-
-# =============================================================================
-# BACKEND API CONFIGURATION
-# =============================================================================
-
-# Application Environment
+# ================================================================
+# TRDR Hub Monorepo Environment Template (.env)
+# ================================================================
+# Copy to .env for local development. Override values per service
+# by creating apps/api/.env etc. This file is read by FastAPI
+# settings (apps/api/app/config.py) when ENVIRONMENT != production.
+#
+# General App Settings
 ENVIRONMENT=development
+APP_VERSION=0.1.0-dev
 DEBUG=true
 
-# Database Configuration
+# URLs (used by billing callbacks and frontend)
+API_BASE_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:5173
+
+# Database (Postgres or Supabase-compatible)
 DATABASE_URL=postgresql://username:password@localhost:5432/lcopilot_dev
 
-# =============================================================================
-# AWS SERVICES CONFIGURATION
-# =============================================================================
+# Security
+SECRET_KEY=replace-with-local-secret
+JWT_SECRET_KEY=replace-with-jwt-secret
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+JWT_EXPIRATION_HOURS=24
 
-# AWS Credentials (required for S3 document storage)
+# AWS (S3 + optional Textract fallback)
 AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your-aws-access-key-id-here
-AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key-here
+AWS_ACCESS_KEY_ID=your-local-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-local-aws-secret-key
+S3_BUCKET_NAME=lcopilot-dev-documents
+DR_OBJECT_BACKUP_BUCKET=trdrhub-dev-backups
 
-# S3 Storage
-S3_BUCKET_NAME=your-s3-bucket-name
-
-# =============================================================================
-# GOOGLE CLOUD SERVICES CONFIGURATION
-# =============================================================================
-
-# Google Cloud Project (required for Document AI OCR)
+# Google Document AI
 GOOGLE_CLOUD_PROJECT=your-gcp-project-id
 GOOGLE_DOCUMENTAI_LOCATION=us
-GOOGLE_DOCUMENTAI_PROCESSOR_ID=your-processor-id-here
+GOOGLE_DOCUMENTAI_PROCESSOR_ID=processor-id
+GOOGLE_APPLICATION_CREDENTIALS=/absolute/path/to/service-account.json
 
-# Path to Google Cloud service account JSON file
-GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/service-account.json
+# AI Providers (optional - required for Phase 6 assist features)
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+LLM_MODEL_VERSION=gpt-4o-mini
 
-# =============================================================================
-# AUTHENTICATION & SECURITY
-# =============================================================================
+# Billing Providers
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+SSLCOMMERZ_STORE_ID=
+SSLCOMMERZ_STORE_PASSWORD=
+SSLCOMMERZ_SANDBOX=true
 
-# JWT Secret Key (generate a secure random key for production)
-SECRET_KEY=your-super-secret-jwt-key-here-please-change-this
-
-# Token expiration in minutes
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# =============================================================================
-# STUB/DEVELOPMENT MODE CONFIGURATION
-# =============================================================================
-
-# Enable stub mode for development (bypasses real cloud services)
+# Stub / Demo Mode
 USE_STUBS=true
-
-# Stub scenario for testing (see apps/api/stubs/ directory)
 STUB_SCENARIO=lc_happy.json
-
-# Simulate failures for testing
 STUB_FAIL_OCR=false
 STUB_FAIL_STORAGE=false
-
-# Local directories for stub mode
-STUB_DATA_DIR=./stubs
+STUB_DATA_DIR=./apps/api/stubs
 STUB_UPLOAD_DIR=/tmp/lcopilot_uploads
 
-# =============================================================================
-# FRONTEND WEB APP CONFIGURATION
-# =============================================================================
+# Observability
+LOG_LEVEL=INFO
+APP_LOG_FORMAT=json
+CLOUDWATCH_NAMESPACE=lcopilot-dev
+SENTRY_DSN=
 
-# API endpoint for frontend to connect to backend
+# Frontend (Vite)
 VITE_API_URL=http://localhost:8000
+VITE_APP_NAME=LCopilot
+VITE_TOKEN_STORAGE_KEY=lcopilot_token
 
-# Optional: Analytics and monitoring
-# VITE_ANALYTICS_ID=your-analytics-id
-# VITE_SENTRY_DSN=your-sentry-dsn
-
-# =============================================================================
-# OPTIONAL: ADDITIONAL SERVICES
-# =============================================================================
-
-# Redis (if using for caching/sessions)
-# REDIS_URL=redis://localhost:6379
-
-# Email service (if implementing notifications)
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USERNAME=your-email@gmail.com
-# SMTP_PASSWORD=your-app-password
-
-# Monitoring and logging
-# SENTRY_DSN=your-sentry-dsn-here
-# LOG_LEVEL=INFO
-
-# =============================================================================
-# PRODUCTION-SPECIFIC SETTINGS
-# =============================================================================
-
-# SSL and security (production only)
-# SSL_REDIRECT=true
-# SECURE_PROXY_SSL_HEADER=HTTP_X_FORWARDED_PROTO,https
-
-# Rate limiting (production only)
-# RATE_LIMIT_ENABLED=true
-# RATE_LIMIT_REQUESTS=100
-# RATE_LIMIT_WINDOW=3600
-
-# CORS settings (adjust for production domains)
-# CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
-
-# =============================================================================
-# DEVELOPMENT HELPERS
-# =============================================================================
-
-# Enable detailed error messages (development only)
-# SHOW_ERROR_DETAILS=true
-
-# Enable SQL query logging (development only)
-# LOG_SQL_QUERIES=false
-
-# Auto-reload on file changes (development only)
-# AUTO_RELOAD=true
+# Optional Services
+REDIS_URL=redis://localhost:6379
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
