--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.77.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^4.35.3",
     "autoprefixer": "^10.4.21",
@@ -45,11 +46,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^23.7.6",
-    "react-i18next": "^13.5.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
-    "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.286.0",
     "nanoid": "^3.3.11",
@@ -60,6 +60,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^13.5.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.16.0",
     "recharts": "^3.2.0",
