--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -9,8 +9,8 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
-supabase==2.3.0
-httpx==0.25.2
+supabase>=2.3.0
+httpx>=0.24.0,<0.25.0
 redis==5.0.1
 celery==5.3.4
 pytest==7.4.3
