--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -8,12 +8,16 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic-settings>=2.0.3
 supabase>=2.3.0
 httpx>=0.24.0,<0.25.0
 redis==5.0.1
 celery==5.3.4
 pytest==7.4.3
-pytest-asyncio==0.21.1
+pytest-asyncio>=0.23.5
+pytest-cov>=5.0.0
 structlog==24.1.0
 psutil==5.9.8
+werkzeug>=3.0.0
+boto3>=1.34.0
+email-validator>=2.0.0
