--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "apps/web/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "apps/web/dist"
-      }
-    }
-  ],
-  "buildCommand": "cd apps/web && npm install && npm run build && cd ../.. && rm -rf dist && cp -r apps/web/dist dist",
-  "outputDirectory": "dist",
+  "buildCommand": "cd apps/web && npm install && npm run build",
+  "outputDirectory": "apps/web/dist",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/" }
