Enhance RulHub integration by adding configuration options in env.example and updating settings in config.py. Introduce new user roles and permissions in models and RBAC, and implement middleware for tenant resolution. Update main.py to initiate RulHub sync job on startup. Add new bank-related endpoints in billing router and improve document validation logic to support RulHub API. Mark trdrhub-suite as dirty to indicate uncommitted changes.

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -36,3 +36,8 @@ STUB_DATA_DIR=./stubs
 STUB_UPLOAD_DIR=/tmp/lcopilot_uploads
 STUB_FAIL_OCR=false
 STUB_FAIL_STORAGE=false
+
+# RulHub API Integration (Phase 7)
+USE_RULHUB_API=false
+RULHUB_API_URL=https://api.rulhub.com
+RULHUB_API_KEY=
