Update CORS configuration in settings and main.py for production security. Add CORS_ALLOW_ORIGINS to config.py and enhance env.example with CORS instructions. Mark trdrhub-suite as dirty to indicate uncommitted changes.

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -20,6 +20,12 @@ STUB_SCENARIO=lc_happy.json
 SECRET_KEY=your-secret-key-here
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# CORS Configuration (Production)
+# Comma-separated list of allowed origins, e.g.:
+# CORS_ALLOW_ORIGINS=https://trdrhub.com,https://www.trdrhub.com,https://trdrhub.vercel.app
+# Leave unset for development (defaults to "*")
+# CORS_ALLOW_ORIGINS=
+
 # AWS Configuration (for file storage)
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your-access-key-here
