--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -11,6 +11,7 @@ pydantic==2.5.0
 pydantic-settings>=2.0.3
 supabase>=2.3.0
 httpx>=0.24.0,<0.25.0
+requests>=2.31.0
 redis==5.0.1
 celery==5.3.4
 pytest==7.4.3
