Enhance database URL handling by normalizing postgres:// to postgresql:// and removing pgbouncer=true parameter for compatibility with psycopg2. Update env.example to clarify connection ports for pooled and direct connections. Mark trdrhub-suite as dirty to indicate uncommitted changes.

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -4,7 +4,14 @@ SUPABASE_ANON_KEY=your-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Database (Supabase PostgreSQL)
-DATABASE_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
+# For pooled connection (app runtime): Use port 6543
+# For direct connection (migrations): Use port 5432 (set DIRECT_DATABASE_URL)
+# Note: Do NOT include ?pgbouncer=true - it will be automatically stripped
+DATABASE_URL=postgresql://postgres:your-password@db.your-project.supabase.co:6543/postgres
+
+# Direct connection for migrations (Supabase port 5432)
+# Migrations require direct connection, not pooled
+DIRECT_DATABASE_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
 
 # Alternative Supabase DB connection
 SUPABASE_DB_HOST=db.your-project.supabase.co
