Enhance onboarding process by adding support for Supabase authentication. Update user registration and login flows to utilize Supabase SDK. Refactor onboarding components to streamline user experience and improve role-based navigation. Mark trdrhub-suite as dirty to indicate uncommitted changes.

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -2,6 +2,14 @@
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+SUPABASE_ISSUER=https://your-project.supabase.co/auth/v1
+SUPABASE_AUDIENCE=authenticated
+SUPABASE_JWKS_URL=https://your-project.supabase.co/auth/v1/.well-known/jwks.json
+
+# Optional: configure a secondary IdP such as Auth0
+AUTH0_ISSUER=
+AUTH0_AUDIENCE=
+AUTH0_JWKS_URL=
 
 # Database (Supabase PostgreSQL)
 # For pooled connection (app runtime): Use port 6543
