fix: add trdrhub-api.onrender.com to CSP connect-src

--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
         { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' https://*.supabase.co https://*.trdrhub.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
+          "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' https://*.supabase.co https://*.trdrhub.com https://trdrhub-api.onrender.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
         }
       ]
     }
