feat(bank): add v2 sidebar layout with dashboard-01 pattern
- Create BankSidebar with nav items (Upload, Queue, Results, Clients, Notifications, Analytics)
- Create DashboardLayout wrapper (SidebarProvider + header + content)
- Create BankDashboardV2 using new layout
- Add /lcopilot/bank-dashboard/v2 route
- Adapt shadcn dashboard-01 pattern with Lucide icons
- Keep all existing functionality (Quick Stats, upload, queue, results, clients, notifications)
- URL-based navigation instead of tabs
- Responsive sidebar (collapses on mobile)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "turbo run type-check"
   },
   "devDependencies": {
+    "shadcn": "^3.5.0",
     "turbo": "^2.0.0"
   },
   "packageManager": "npm@10.0.0",
