--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -25,3 +25,10 @@ email-validator>=2.0.0
 PyJWT>=2.8.0
 weasyprint>=61.0
 openpyxl>=3.1.5
+stripe>=7.0.0
+
+# DeepSeek OCR dependencies (optional - only needed if USE_DEEPSEEK_OCR=true)
+torch>=2.0.0
+transformers>=4.35.0
+pillow>=10.0.0
+pdf2image>=1.16.0
