feat: Add DeepSeek OCR configuration and integration
- Introduced DeepSeek OCR as an alternative to Google Cloud Document AI
- Updated env.example with DeepSeek OCR settings
- Enhanced Settings class in config.py to include DeepSeek OCR options
- Modified OCRFactory to prioritize DeepSeek OCR if enabled
- Improved error handling for DeepSeek OCR initialization

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -52,6 +52,12 @@ GOOGLE_CLOUD_PROJECT=your-project-id
 GOOGLE_DOCUMENTAI_PROCESSOR_ID=your-processor-id
 GOOGLE_DOCUMENTAI_LOCATION=us
 
+# DeepSeek OCR Configuration (alternative to Google Cloud Document AI)
+# Set USE_DEEPSEEK_OCR=true to use DeepSeek OCR instead of Google Cloud
+USE_DEEPSEEK_OCR=false
+DEEPSEEK_OCR_MODEL_NAME=deepseek-ai/deepseek-ocr
+DEEPSEEK_OCR_DEVICE=  # Leave empty for auto-detect, or set to 'cuda' or 'cpu'
+
 # Stub Mode Settings
 STUB_DATA_DIR=./stubs
 STUB_UPLOAD_DIR=/tmp/lcopilot_uploads
