--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -23,6 +23,7 @@ pytest-asyncio>=0.23.5
 pytest-cov>=5.0.0
 structlog==24.1.0
 psutil==5.9.8
+mangum>=0.17.0  # AWS Lambda adapter (optional)
 werkzeug>=3.0.0
 boto3>=1.34.0
 email-validator>=2.0.0
