Fix onboarding status timeout and optimize backend performance
- Optimize onboarding status endpoint to use single commit instead of multiple
- Increase frontend timeout from 3s to 10s for initial check
- Increase retry timeout from 2s to 5s
- Add fast path to skip restoration if onboarding_data already exists
- Combine company linking, data restoration, and auto-completion into single transaction
- Improve error handling to prevent endpoint crashes

--- a/render.yaml
+++ b/render.yaml
@@ -19,10 +19,12 @@ services:
     envVars:
       - key: ENVIRONMENT
         value: production
-      # Redis connection will be automatically set when you link the Redis service
-      # in Render Dashboard → Service Connections, or manually set REDIS_URL here:
+      # Redis connection: After creating Key Value Store, copy REDIS_URL from the
+      # Key Value Store service and add it manually to this web service's environment variables
+      # Example:
       # - key: REDIS_URL
-      #   sync: false  # Set manually after Redis instance is created
+      #   value: redis://red-xxxxx:6379  # Copy from Key Value Store service
+      #   sync: false
       # Map secrets via Render Environment Groups or manual entries:
       # - fromGroup: trdrhub-api-secrets
 
