feat: Enhance document validation with structured data extraction
- Added functionality to extract structured fields from uploaded documents, improving the validation process.
- Implemented methods for inferring document types and extracting text from PDFs using pdfminer and PyPDF2.
- Updated validation logic to incorporate extracted context, enhancing the robustness of document evaluations.
- Introduced logging for better traceability during document processing.

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -40,3 +40,5 @@ google-cloud-documentai>=2.20.0  # For Google Cloud Document AI OCR
 # transformers>=4.35.0
 pillow>=10.0.0  # Used by other parts of the app
 pdf2image>=1.16.0  # Used by other parts of the app
+pdfminer.six>=20231228
+PyPDF2>=3.0.1
