--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -34,6 +34,10 @@ openpyxl>=3.1.5
 stripe>=7.0.0
 google-cloud-documentai>=2.20.0  # For Google Cloud Document AI OCR
 
+# LLM Provider dependencies (for AI enrichment)
+openai>=1.0.0  # OpenAI GPT provider
+anthropic>=0.18.0  # Anthropic Claude provider
+
 # DeepSeek OCR dependencies (optional - only needed if USE_DEEPSEEK_OCR=true)
 # Commented out to reduce build size (~3.5GB). Uncomment if enabling DeepSeek OCR.
 # torch>=2.0.0
