chore: update environment configuration and health check endpoints - Added Supabase configuration variables to .env.example and apps/web/.env.example. Updated health check endpoint from /health/live to /healthz in main.py and render.yaml. Enhanced validation in config.py to ensure required environment variables are set for production.

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,13 @@ FRONTEND_URL=http://localhost:5173
 # Database (Postgres or Supabase-compatible)
 DATABASE_URL=postgresql://username:password@localhost:5432/lcopilot_dev
 
+# Supabase Auth (shared between API + web client)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=public-anon-key
+SUPABASE_SERVICE_ROLE_KEY=service-role-key
+SUPABASE_ISSUER=https://your-project.supabase.co/auth/v1
+SUPABASE_JWKS_URL=https://your-project.supabase.co/auth/v1/.well-known/jwks.json
+
 # Security
 SECRET_KEY=replace-with-local-secret
 JWT_SECRET_KEY=replace-with-jwt-secret
@@ -35,6 +42,7 @@ GOOGLE_CLOUD_PROJECT=your-gcp-project-id
 GOOGLE_DOCUMENTAI_LOCATION=us
 GOOGLE_DOCUMENTAI_PROCESSOR_ID=processor-id
 GOOGLE_APPLICATION_CREDENTIALS=/absolute/path/to/service-account.json
+GOOGLE_APPLICATION_CREDENTIALS_JSON= # For Render/Heroku style deployments paste the JSON blob here
 
 # AI Providers (optional - required for Phase 6 assist features)
 OPENAI_API_KEY=
@@ -67,6 +75,10 @@ SENTRY_DSN=
 VITE_API_URL=http://localhost:8000
 VITE_APP_NAME=LCopilot
 VITE_TOKEN_STORAGE_KEY=lcopilot_token
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=public-anon-key
+VITE_SUPABASE_PROJECT_REF=your-project-ref
+VITE_GUEST_MODE=false
 
 # Optional Services
 REDIS_URL=redis://localhost:6379
