--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -51,6 +51,7 @@ S3_BUCKET_NAME=lcopilot-documents
 GOOGLE_CLOUD_PROJECT=your-project-id
 GOOGLE_DOCUMENTAI_PROCESSOR_ID=your-processor-id
 GOOGLE_DOCUMENTAI_LOCATION=us
+GOOGLE_APPLICATION_CREDENTIALS_JSON=  # Paste JSON credentials blob for Render/Heroku or leave blank locally
 
 # DeepSeek OCR Configuration (alternative to Google Cloud Document AI)
 # Set USE_DEEPSEEK_OCR=true to use DeepSeek OCR instead of Google Cloud
