--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -5,3 +5,12 @@ VITE_API_URL=http://localhost:8000
 VITE_APP_NAME=LCopilot (Dev)
 VITE_TOKEN_STORAGE_KEY=lcopilot_token
 VITE_APP_ENV=development
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=public-anon-key
+VITE_SUPABASE_PROJECT_REF=your-project-ref
+VITE_GUEST_MODE=false
+VITE_STRIPE_PRICE_STARTER=
+VITE_STRIPE_PRICE_PROFESSIONAL=
+VITE_STRIPE_PRICE_ENTERPRISE=
+VITE_STRIPE_TAX_ENABLED=false
+VITE_BILLING_PROVIDERS=stripe
