--- a/render.yaml
+++ b/render.yaml
@@ -11,11 +11,11 @@ services:
     plan: starter
     region: oregon
     rootDir: apps/api
-    buildCommand: pip install --upgrade pip && pip install --upgrade "bcrypt>=4.1.2" && pip install -r requirements.txt
-    startCommand: python -m uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     postDeployCommand: alembic upgrade head
     autoDeploy: true
-    healthCheckPath: /health/live
+    healthCheckPath: /healthz
     envVars:
       - key: ENVIRONMENT
         value: production
