feat: implement rate limiting and performance testing enhancements - Added new environment variables for API rate limiting in .env.example. Updated the rate limiter middleware to support unauthenticated and authenticated limits. Enhanced document processing to utilize caching for OCR results and introduced performance tests in CI workflow, improving overall efficiency and response handling.

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ DEBUG=true
 API_BASE_URL=http://localhost:8000
 FRONTEND_URL=http://localhost:5173
 
+# Rate limiting / throttling
+API_RATE_LIMIT_TENANT=120
+API_RATE_LIMIT_ANON=10
+API_RATE_WINDOW=60
+
 # Database (Postgres or Supabase-compatible)
 DATABASE_URL=postgresql://username:password@localhost:5432/lcopilot_dev
 
@@ -43,11 +48,13 @@ GOOGLE_DOCUMENTAI_LOCATION=us
 GOOGLE_DOCUMENTAI_PROCESSOR_ID=processor-id
 GOOGLE_APPLICATION_CREDENTIALS=/absolute/path/to/service-account.json
 GOOGLE_APPLICATION_CREDENTIALS_JSON= # For Render/Heroku style deployments paste the JSON blob here
+OCR_MAX_CONCURRENCY=3
 
 # AI Providers (optional - required for Phase 6 assist features)
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 LLM_MODEL_VERSION=gpt-4o-mini
+LLM_LOW_COST_MODEL=gpt-4o-mini
 
 # Billing Providers
 STRIPE_SECRET_KEY=
@@ -70,6 +77,7 @@ LOG_LEVEL=INFO
 APP_LOG_FORMAT=json
 CLOUDWATCH_NAMESPACE=lcopilot-dev
 SENTRY_DSN=
+ENABLE_QUERY_PROFILING=false
 
 # Frontend (Vite)
 VITE_API_URL=http://localhost:8000
