--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,8 @@ services:
   - type: web
     name: trdrhub-api
     env: python
-    plan: starter
-    region: oregon
+    plan: standard
+    region: singapore
     rootDir: apps/api
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
