feat: add AI and semantic AI configuration options to environment files
- Introduced new environment variables for AI enrichment and semantic AI capabilities in env.example and RENDER_PRODUCTION_ENV.md
- Configurations include options for LLM provider, model versions, and semantic comparison settings, enhancing the validation pipeline with AI-driven features.

--- a/apps/api/env.example
+++ b/apps/api/env.example
@@ -69,3 +69,24 @@ STUB_FAIL_STORAGE=false
 USE_RULHUB_API=false
 RULHUB_API_URL=https://api.rulhub.com
 RULHUB_API_KEY=
+
+# AI/LLM Configuration
+# Enable AI enrichment in validation pipeline
+AI_ENRICHMENT=true
+LLM_PROVIDER=openai
+OPENAI_API_KEY=your-openai-api-key-here
+ANTHROPIC_API_KEY=  # Optional: for Anthropic Claude models
+LLM_MODEL_VERSION=gpt-4o-mini
+ANTHROPIC_MODEL_VERSION=claude-3-haiku-20240307
+
+# Semantic AI Configuration (for cross-document fuzzy comparisons)
+# Enable semantic_check operator in rule engine
+AI_SEMANTIC_ENABLED=true
+# Model to use for semantic comparisons (should be cost-effective)
+AI_SEMANTIC_MODEL=gpt-4o-mini
+# Low-cost model fallback (currently same as primary)
+AI_SEMANTIC_LOW_COST_MODEL=gpt-4o-mini
+# Confidence threshold for semantic matches (0.0-1.0, default 0.82 = 82%)
+AI_SEMANTIC_THRESHOLD_DEFAULT=0.82
+# Timeout for semantic AI calls in milliseconds (default 6000ms = 6 seconds)
+AI_SEMANTIC_TIMEOUT_MS=6000
