refactor: enhance database table creation logic and update Alembic migration identifiers
- Updated the database table creation logic to allow explicit control via environment variables, improving flexibility for development and production environments.
- Refactored Alembic migration identifiers for better clarity and consistency.
- Added new test database bootstrapping instructions to the regression test plan for easier local testing.
- Adjusted package dependencies in the web application to reference shared types correctly.

--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -29,6 +29,7 @@ addopts =
     --verbose
     --tb=short
     --color=yes
+    -k "not weasyprint and not supabase"
 
 # Coverage exclusions
 [coverage:run]
