fix: add tailwindcss to root package.json for Vercel build
- Adds tailwindcss as root devDependency to ensure it's available for tailwindcss-animate
- Fixes 'Cannot find module tailwindcss/plugin' error during Vercel deployment
- Simplifies vercel.json install command since tailwindcss is now in root

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd apps/web && NODE_PATH=../../node_modules:$NODE_PATH npm run build",
+  "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/dist",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
