--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "devDependencies": {
     "shadcn": "^3.5.0",
+    "tailwindcss": "^3.4.17",
     "turbo": "^2.0.0"
   },
   "packageManager": "npm@10.0.0",
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/api",
+    "apps/web",
+    "packages/shared-types"
   ]
 }
