--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "version": 2,
   "buildCommand": "cd apps/web && npm install && npm run build",
   "outputDirectory": "apps/web/dist",
+  "git": {
+    "deployIgnoreSubmodules": true
+  },
   "rewrites": [
     {
       "source": "/(.*)",
