--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -32,12 +32,13 @@ PyJWT>=2.8.0
 weasyprint>=61.0
 openpyxl>=3.1.5
 stripe>=7.0.0
-# Google Cloud Document AI OCR (force reinstall Dec 2025)
-google-cloud-documentai>=2.20.0
-google-api-core>=2.15.0  # Required by documentai
-grpcio>=1.60.0  # Required for gRPC communication
-proto-plus>=1.22.0  # Required for protobuf handling
-google-cloud-core>=2.4.0  # Core Google Cloud client library
+# Google Cloud Document AI OCR (upgraded Dec 2025 - fix processor_version field)
+google-cloud-documentai>=2.29.0  # Latest as of Dec 2025
+google-api-core>=2.19.0  # Required by documentai
+grpcio>=1.62.0  # Required for gRPC communication
+proto-plus>=1.25.0  # Required for protobuf handling - must be recent for new API fields
+protobuf>=4.25.0  # Explicit protobuf version for field compatibility
+google-cloud-core>=2.4.1  # Core Google Cloud client library
 
 # LLM Provider dependencies (for AI enrichment)
 openai>=1.0.0  # OpenAI GPT provider
