feat(geo): Auto-detect country from IP using Vercel geo headers
- Add /api/geo Vercel Edge Function to expose IP geolocation
- Update vercel.json to route /api/geo to Edge Function (not proxy)
- Auto-detect and pre-select country on registration page load
- Remove country input from onboarding wizard (already captured at signup)
- User can still manually change country if using VPN or traveling

How it works:
1. User visits /register
2. Frontend calls /api/geo
3. Vercel returns x-vercel-ip-country header (FREE!)
4. Country dropdown auto-selects matching country
5. Shows 'Local payment options available' for BD/IN/PK/etc

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -6,6 +6,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/geo",
+      "destination": "/api/geo"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "https://trdrhub-api.onrender.com/$1"
     },
