feat(tracking): Add background job scheduler for alerts
Task 1.6: Set up APScheduler for background jobs

New scheduler module (app/scheduler.py):
- check_tracking_alerts: Runs every 15 minutes
- refresh_active_shipments: Runs every hour
- cleanup_old_notifications: Runs daily at 3 AM UTC

Integration:
- Scheduler starts/stops with FastAPI lifespan
- Added /tracking/health endpoint shows scheduler status
- Added apscheduler to requirements.txt

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -19,6 +19,7 @@ prometheus-client>=0.19.0  # For Prometheus metrics
 requests>=2.31.0
 redis==5.0.1
 celery==5.3.4
+apscheduler==3.10.4  # Background job scheduler for tracking alerts
 pytest==7.4.3
 pytest-asyncio>=0.23.5
 pytest-cov>=5.0.0
