--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.77.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^4.35.3",
+    "@types/leaflet": "^1.9.21",
     "autoprefixer": "^10.4.21",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.286.0",
     "nanoid": "^3.3.11",
     "next-themes": "^0.4.6",
@@ -65,6 +67,7 @@
     "react-hook-form": "^7.62.0",
     "react-i18next": "^13.5.0",
     "react-is": "^18.2.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.16.0",
     "recharts": "^3.2.0",
