--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -31,6 +31,7 @@ boto3>=1.34.0
 email-validator>=2.0.0
 PyJWT>=2.8.0
 weasyprint>=61.0
+reportlab>=4.0.0  # PDF generation for compliance reports
 openpyxl>=3.1.5
 stripe>=7.0.0
 # Google Cloud Document AI OCR - PINNED versions to fix processor_version field error
