--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -28,6 +28,7 @@ psutil==5.9.8
 mangum>=0.17.0  # AWS Lambda adapter (optional)
 werkzeug>=3.0.0
 boto3>=1.34.0
+python-docx>=1.1.0  # For Word document (.docx) generation
 email-validator>=2.0.0
 PyJWT>=2.8.0
 weasyprint>=61.0
