--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,14 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:lcopilot": "playwright test tests/e2e/lcopilot",
+    "test:e2e:smoke": "playwright test --config=playwright.smoke.config.ts --headed"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -78,6 +85,7 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
